--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<section class="grid-container">
 		<h2>Imagery</h2>
 		<div class="imagery-1">
-			<img src="http://placehold.it/300x200">
+			<img src="http://wallpoper.com/images/00/38/80/06/animals-wolves_00388006.jpg">
 		</div>
 		<div class="imagery-2">
-			<img src="http://placehold.it/300x200">
+			<img src="https://s-media-cache-ak0.pinimg.com/originals/87/25/9a/87259ae109b94797d479ae7823986c2b.png">
 		</div>
 		<div class="imagery-3">
 			<img src="http://placehold.it/300x200">
